--- a/mvp-python/requirements.txt
+++ b/mvp-python/requirements.txt
@@ -1,6 +1,5 @@
-Flask==2.3.4
-Flask-WTF==1.1.1
-WTForms==3.0.1
-Flask-Login==0.6.2
+Flask==2.3.3
+Flask-WTF==1.2.1
+email-validator==2.1.0.post1
+Flask-SQLAlchemy==3.1.1
 Flask-Bcrypt==1.0.1
-itsdangerous==2.1.2
